# nexusquant

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: PHASE_0.md  PHASE_1.md  PHASE_1_RETRO.md  dev-checks.md
infra/: docker-compose.yaml
infra/helm/signal/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/signal/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  service.yaml  servicemonitor.yaml
infra/postgres/init/: 00_extensions.sql  10_signals.sql  20_decisions.sql  30_orders.sql  40_risk_events.sql  50_proposals.sql
schemas/: get_market_status.json  get_portfolio.json  get_risk_budget.json  get_sentiment.json  get_signal.json  get_watchlist.json  place_paper_order.json
schemas/examples/: get_market_status.response.json  get_portfolio.response.json  get_risk_budget.response.json  get_sentiment.request.json  get_sentiment.response.json  get_signal.request.json  get_signal.response.json  get_watchlist.response.json  place_paper_order.request.json  place_paper_order.response.json  place_paper_order.response.pending_approval.json  place_paper_order.response.rejected.json
services/executor/: Dockerfile  README.md  pyproject.toml
services/executor/src/nexusquant_executor/: config.py  main.py
services/executor/tests/: test_health.py
services/ingester/: Dockerfile  README.md  pyproject.toml
services/ingester/src/nexusquant_ingester/: config.py  main.py
services/ingester/tests/: test_health.py
services/mcp/: Dockerfile  README.md  pyproject.toml
services/mcp/src/nexusquant_mcp/: config.py  main.py
services/mcp/tests/: test_health.py
services/risk/: Dockerfile  README.md  pyproject.toml
services/risk/src/nexusquant_risk/: config.py  main.py
services/risk/tests/: test_health.py
services/signal/: Dockerfile  README.md  pyproject.toml
services/signal/src/nexusquant_signal/: alpaca_clients.py  alpaca_logger.py  alpaca_service.py  cache.py  config.py  db.py  indicators.py  main.py  market_hours.py  metrics.py  rate_limiter.py  rules.py  types.py  universe.py
services/signal/tests/: conftest.py  test_health.py
services/signal/tests/integration/: test_alpaca_roundtrip.py
services/signal/tests/unit/: conftest.py  test_404_outside_universe.py  test_alpaca_logger.py  test_cache.py  test_db_persistence.py  test_indicators.py  test_metrics.py  test_rate_limiter.py  test_rules.py  test_settings_validation.py  test_signal_endpoint.py  test_universe.py
services/slack/: Dockerfile  README.md  pyproject.toml
services/slack/src/nexusquant_slack/: config.py  main.py
services/slack/tests/: test_health.py
services/watchlist/: Dockerfile  README.md  pyproject.toml
services/watchlist/src/nexusquant_watchlist/: config.py  main.py
services/watchlist/tests/: test_health.py
tests/unit/: test_schemas.py
