# Root-level tooling config shared by every service.
# Service packages live under services/<name>/ and have their own pyproject.toml
# for dependencies, but inherit ruff/mypy settings from this file when tools are
# invoked from the repo root (which is what CI does).

[project]
name = "nexusquant"
version = "0.0.0"
description = "NexusQuant monorepo tooling root. Runtime code lives under services/."
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "jsonschema[format-nongpl]>=4.20",
    "httpx>=0.27",
    "nexusquant-signal",
    "nexusquant-risk",
    "nexusquant-executor",
    "nexusquant-watchlist",
    "nexusquant-ingester",
    "nexusquant-mcp",
    "nexusquant-slack",
]

[tool.uv.workspace]
members = ["services/*"]

[tool.uv.sources]
nexusquant-signal = { workspace = true }
nexusquant-risk = { workspace = true }
nexusquant-executor = { workspace = true }
nexusquant-watchlist = { workspace = true }
nexusquant-ingester = { workspace = true }
nexusquant-mcp = { workspace = true }
nexusquant-slack = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "services"]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
